# mini-shell

./: .dockerignore  README.md  dockerfile  dockerfile.distroless  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/: config.py  logger_config.py  main.py  shell.py
src/commands/: cat.py  cd.py  cp.py  grep.py  history.py  ls.py  mv.py  pwd.py  rm.py  tar.py  undo.py  untar.py  unzip.py  utils.py  zip.py
src/services/: mini_shell_service.py
tests/: conftest.py  test_cat.py  test_cd.py  test_cp.py  test_grep.py  test_history.py  test_ls.py  test_mv.py  test_pwd.py  test_rm.py  test_shell.py  test_tar.py  test_undo.py  test_untar.py  test_unzip.py  test_utils.py  test_zip.py
